--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300i,400,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link href="../Css/style.css" rel="stylesheet">
+    <link href="Css/style.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="center-item">
 		<form class="form-signin col-sm-9 col-md-7 col-lg-5 mx-auto" id="login" method="POST" autocomplete="off" required>
-            <img src="../assets/guvilogo.svg" class="img-responsive logo" alt="Guvi Logo">
+            <img src="assets/guvilogo.svg" class="img-responsive logo" alt="Guvi Logo">
             <h4>Login To GUVI</h4>
 			<span><p id="error"></p></span>
 			<input type="text" class="form-control" minlength="2" maxlength="10" name="username" id="user" placeholder="Enter username">
@@ -26,9 +26,9 @@
 		</form>
 
     </div>
-    <script src="../Js/jquery/jquery-3.2.1.min.js"  crossorigin="anonymous"></script>
+    <script src="Js/jquery/jquery-3.2.1.min.js"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
-    <script src="../Js/login.js" defer></script>
+    <script src="Js/login.js" defer></script>
 </body>
 
 </html>
