--- a/Html/index.html
+++ b/Html/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300i,400,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link href="Css/style.css" rel="stylesheet">
+    <link href="http://localhost/guvi/Css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,9 +26,9 @@
 		</form>
 
     </div>
-    <script src="Js/jquery/jquery-3.2.1.min.js"  crossorigin="anonymous"></script>
+    <script src="http://localhost/guvi/Js/jquery/jquery-3.2.1.min.js"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
-    <script src="Js/login.js" defer></script>
+    <script src="http://localhost/guvi/Js/login.js" defer></script>
 </body>
 
 </html>
