--- a/Html/index.html
+++ b/Html/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="center-item">
 		<form class="form-signin col-sm-9 col-md-7 col-lg-5 mx-auto" id="login" method="POST" autocomplete="off" required>
-            <img src="assets/guvilogo.svg" class="img-responsive logo" alt="Guvi Logo">
+            <img src="http://localhost/guvi/assets/guvilogo.svg" class="img-responsive logo" alt="Guvi Logo">
             <h4>Login To GUVI</h4>
 			<span><p id="error"></p></span>
 			<input type="text" class="form-control" minlength="2" maxlength="10" name="username" id="user" placeholder="Enter username">
