--- a/Html/register.html
+++ b/Html/register.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="center-item">
 		<form class="form-signin col-sm-9 col-md-7 col-lg-5 mx-auto" action=""  method="POST" id="register" autocomplete="off" required>
-            <img src="assets/guvilogo.svg" class="logo" alt="Guvi Logo">
+            <img src="http://localhost/guvi/assets/guvilogo.svg" class="logo" alt="Guvi Logo">
             <h4>Register To GUVI</h4>
             <span><p id="error"></p></span>
             <input type="text" class="form-control" id="name" minlength="2" maxlength="30" placeholder="Enter Your Name" required>
