--- a/Html/403.html
+++ b/Html/403.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mathesh">
     <title>GUVI Task By Mathesh</title>
-    <link rel="stylesheet" href="http://localhost/guvi/Css/error.css">
+    <link rel="stylesheet" href="http://guvi-task-mathesh.herokuapp.com/Css/error.css">
 </head>
 <body>
     <div id="app">
