--- a/Html/index.html
+++ b/Html/index.html
@@ -26,7 +26,7 @@
 		</form>
 
     </div>
-    <script src="http://guvi-task-mathesh.herokuapp.com/Js/jquery/jquery-3.2.1.min.js"  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
     <script src="http://guvi-task-mathesh.herokuapp.com/Js/login.js" defer></script>
 </body>
