--- a/Html/register.html
+++ b/Html/register.html
@@ -10,13 +10,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300i,400,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link href="http://guvi-task-mathesh.herokuapp.com/Css/style.css" rel="stylesheet">
+    <link href="../Css/style.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="center-item">
 		<form class="form-signin col-sm-9 col-md-7 col-lg-5 mx-auto" action=""  method="POST" id="register" autocomplete="off" required>
-            <img src="http://guvi-task-mathesh.herokuapp.com/assets/guvilogo.svg" class="logo" alt="Guvi Logo">
+            <img src="../assets/guvilogo.svg" class="logo" alt="Guvi Logo">
             <h4>Register To GUVI</h4>
             <span><p id="error"></p></span>
             <input type="text" class="form-control" id="name" minlength="2" maxlength="30" placeholder="Enter Your Name" required>
@@ -33,9 +33,9 @@
 
     </div>
 
-    <script src="http://guvi-task-mathesh.herokuapp.com/Js/jquery/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+    <script src="../Js/jquery/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
-    <script src="http://guvi-task-mathesh.herokuapp.com/Js/register.js" type="text/javascript"></script>
+    <script src="../Js/register.js" type="text/javascript"></script>
 
 </body>
 
